Fix text overflow in cards for long game names

--- a/src/main/resources/META-INF/resources/css/main.css
+++ b/src/main/resources/META-INF/resources/css/main.css
@@ -222,8 +222,11 @@ button.primary {
 .card-header h4,
 .card-header h5,
 .card-header h6 {
+  height: 1.5rem;
   margin: 0;
   font-weight: bold;
+  overflow: hidden;
+  word-break: break-all;
 }
 
 /* Card grid */
@@ -265,6 +268,7 @@ ul.card-list {
   flex-grow: 1;
 }
 .card.compact .card-after {
+  flex-shrink: 0;
   width: 4rem;
   padding: 0;
   text-align: center;
